# ChangeLog for sys-fs/udev-init-scripts
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev-init-scripts/ChangeLog,v 1.83 2013/07/26 14:50:54 ssuominen Exp $

  26 Jul 2013; Samuli Suominen <ssuominen@gentoo.org>
  udev-init-scripts-26.ebuild:
  m68k stable wrt #470580

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for s390, wrt bug #470580

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for ppc64, wrt bug #470580

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for ppc, wrt bug #470580

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for sparc, wrt bug #470580

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for arm, wrt bug #470580

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for ia64, wrt bug #470580

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for alpha, wrt bug #470580

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for x86, wrt bug #470580

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for amd64, wrt bug #470580

  09 Jun 2013; Agostino Sarubbo <ago@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for sh, wrt bug #470580

  02 Jun 2013; Jeroen Roovers <jer@gentoo.org> udev-init-scripts-26.ebuild:
  Stable for HPPA (bug #470580).

*udev-init-scripts-26 (17 Apr 2013)

  17 Apr 2013; William Hubbs <williamh@gentoo.org>
  +udev-init-scripts-26.ebuild, udev-init-scripts-9999.ebuild:
  version bump

  17 Apr 2013; William Hubbs <williamh@gentoo.org> -udev-init-scripts-24.ebuild:
  remove old version that never went stable

  15 Apr 2013; Jeroen Roovers <jer@gentoo.org> udev-init-scripts-25.ebuild:
  Stable for HPPA (bug #463614).
