@@ -1,23 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST udev-init-scripts-23.tar.bz2 4438 SHA256 38759cefae630ce7ad5ccca4e16c41da64a96f60508a9a8087ad9ff0f7de8b99 SHA512 49d7af884ba1c82889169b4710a399653c8be6a621a80266b3a9232994bce3fbe9b9360b998595617ab78f2658f77b7002584c7cfb31e794ccae0a16a1a0405b WHIRLPOOL 2a977e0bbed64bad09ea4514e00941e59b050c268b18502fbe7840ac91454ae4754cac6d20fcb479cecb1b9412a03c370b9ca69173a9ac21c18c872b927c54e6
-DIST udev-init-scripts-25.tar.bz2 4911 SHA256 2210a0c76b1169d136b3f7c8f8c6ca36b4546aea7e88c355c81009cf10fb9bc3 SHA512 c3b1729c309fa2a74a5887b22239451529238a646df010be685720efe24dd29f09958aac9910aac8defeebe32f427f928376ebfee4184ca88e66f171de792795 WHIRLPOOL 7eeb60031504e9418f9cfa4097634bc1da1835d06c53a3d6e9d9c85e1a8ca6f18a545c1c198528f0c88fc67690061a7f0f755ae2559856f6e60571701fd41174
 DIST udev-init-scripts-26.tar.bz2 4921 SHA256 eff4cd581cb5d57a1fa09772f9f82a37d9a33a3828f0b7e988278a974864d203 SHA512 cbf5de51c7c1f63cfb7ded47175c3dfee0483972ce966d71bb164c78d6d6818d24a1e72cbaf9c3c0dda3674e6bb3b98c53a9e8cba27a8de6176689ddd39b0d9c WHIRLPOOL 6ade24698c8b1b1e7397f494e99e67e960505d846f21e8955e0a433dcde1d5ec5f580d13d867c78c13fc4157dbb532b0a5d4c1adedcda60f2e4186936a53b72a
-EBUILD udev-init-scripts-23.ebuild 2334 SHA256 9f3778a99f206d6b1f86deef6248be0cd8099443b12b52f784e1d50de3ec105a SHA512 5f22428ce18dd64f9720059d3c1d2835022654d57f21111ce8cd1a7a73201e58da5cf4b12178fd29abdf843584d3c2b03b6a6e2eb0261504768e02391149808e WHIRLPOOL 3f78be106633313a4988af5f81d03bccb0556d0456f71ee895eb2326c38e4b52a9162ae6319963345de67a7adebc8edd753b8aada02ca3bba1169e63ebfb9d45
-EBUILD udev-init-scripts-25.ebuild 2329 SHA256 68b6c2a82497deb0d76450f864bd8d74ea5428dbb8470d4dd2f031d8f06e9d67 SHA512 ab831d158713c8277c49ca35cd915464fe79c27d55d0c92b68eeca2af02469b532855ddb6cb0e4c3d15d19e19427504af41315ec99f0885d3592e860be436317 WHIRLPOOL 9d95368a37b74264db7a9354f60bd583645773ab0b33a830d87dd8c71e6be6e7fe3ab240e7457044115d8d69860604a1bdc20a9bb9594e1d77d97e16e7d1b164
-EBUILD udev-init-scripts-26.ebuild 2334 SHA256 31fbdfacd14f7db62aaff46ce917b6a19d869ad4fc55309fec2b43d8229a1e2a SHA512 449316f17e9abc5f0516e28370a81e14895309585b6f9dcb99400597a185a922c5a816b16aca633cc430233ba2efa72c9c2b5b596d71d76ac4baea9e0e5f5320 WHIRLPOOL 864b529b7859d1600bcb76dea76bd92bf11749217499cd8174bce084dd8f7b5e8be7ece997716321c2ca4e2bf096ae44da99ef8b724e9a6dff3b6ed5a8bbb4e7
-EBUILD udev-init-scripts-9999.ebuild 2347 SHA256 78adf17658863e2a3b97098f4044881e1dd881fbe8e5935a14c04a707207f02e SHA512 150b62d9cb23c6cd3a08fbf4a7ec92c74103b1b65cd3c585a334a07936bb225708b7fb103452ce8f874a1ef7c2511338dd9c54148d70b9e34b562c32462721c5 WHIRLPOOL 23081a19ff36975a270616bdf2829edf7c931abd402c2f2643b944579509a7e09521181e1e43c45c8d5717e091b6000382e13f4657d717071c35c597be968359
-MISC ChangeLog 12406 SHA256 3b174dea462dd5fc6829b142288a7085883748bf52f22db9da0aec77c4cbdc5c SHA512 215f1c86ff8c65c76b0bf550e7d6392f5831edeb4d46a7b72e47e932a84f45ebdcb14eafa7ef3dfc051c51b500bca7812c41ef356af1414461e572fcb35cb2b4 WHIRLPOOL b38bec5e4019cc5ee775634bf0877bb82939b71d2338b5345a61c69b14b2a0b64a9677f39aa38620a4a6f887cd8a8406294e8a17e58a336437eec68621a51070
+EBUILD udev-init-scripts-26.ebuild 2315 SHA256 73a0c12739329e3f0bee669c52690970ecde207bf6e5efedac5541bdc35c3be9 SHA512 f021ba7be972c9edc20ad4a522b617638c33d1c2503db0e5f4eec035a495c445414f312c7c348b225c303a17e8f39d1a1c6f137e137867239a1a54d9810af917 WHIRLPOOL 3c534e0c035358322df09c6f60fb1786047d41297280eb8f36005f3a423256bb2493c1c298a9ee75a23d571679a365bc0d8dcbdffb09d3a4f01c8c6133b766ce
+EBUILD udev-init-scripts-9999.ebuild 2329 SHA256 2dba6bd2556f5f22019a747c010aa97970e87c25f8858b1158815e7e7de4955c SHA512 94d0b97e321bee7b98111c5bef003b497429398ba6475eaef35c5d5efc93a3f6b4a5a45890c1580a1c323631bc57b0074e168680e99a8cf45a7cc7628884f5d6 WHIRLPOOL 12a5c4b6c822befe00b1b4e436bed96374452caedf8d7d1cd73c9ba5f18f4635ea785ac5c0a8edfbbb48dd240a9e6f44329e8087fadcbd78cddc6b18cd6359f6
+MISC ChangeLog 12688 SHA256 187c03079a7394d258f9249e1176b484829e560b3ee4c517bc809c73093f8311 SHA512 7f5c58433a59d4221b9bac2448477e34f319005b89c7a81585873508887bad0c83c1ba4934d3bb13b9cd4c0c54e923e62ef4f759be0a08fd488821f3826df448 WHIRLPOOL c7fd65c97850663acc1f6f5c3cfa8791ec2fd0ee4ea8b6e4b7248bdec5d53221fa49948ac889b660d72a837a8524802f92d829cfc26777a37ab758f0dc9d2da2
 MISC metadata.xml 206 SHA256 e8bae0ea2f16b0ad92858b68718c01ab85b5e6995a35b88c74e4ad9772b9f813 SHA512 f6558663be8014488111639a4eeadc9e691f57f2eb4f3c97d6022a50ab2659fac2df458cefed5e29a6661d59221b15332aefa00c027552a8f4bbefc3988e2a90 WHIRLPOOL b515e201c4f614326c4ee0ef0e13fd9d277e913d96265ecce11b41c9628fa38d1e34f90fab1073527e153a9e2e8929c5fee748a8e5eaf98b58fe15928c8ad457
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR8oyTAAoJEEdUh39IaPFNlMUH/R+/7OQl6Jtm12YL9xU0IwY6
-8r5W2Q0xXsuQMk04Rxc+AlqoDnSjT09WsDiyKhioJqjV+XX4sAsh5ZCGmXCAgx/8
-S0gQ/kbWlNnlE/dbH/2bWdNH5p3HF3HOyVhcQDZOQx4RHpZlBGOcCudQXqSigGMO
-/XzfpA/vC76ZWlbGLLdUiB4+0xN2mNHI5SRjntVsx/+TFGf/UWQmdPdVbyY9PHZW
-CUMRnF/BBK08PogF1rLz1r6u0wzb4CZzlpLO4HiBpG612ro9cc3i9yYiu9eoDc54
-0Ox3VlJ6ReHgY9JY+6AflEE9+Yf8JxsnA+83KAmjaKaSBg2M4LeJZPSpygQOcg4=
-=1Y7f
+iF4EAREIAAYFAlJcNDIACgkQC77qH+pIQ6ShAwEAikGzpPUu1MXpnBuRvmeUUVkJ
+kd7OcZ8xwd771u01PHsA/1XaiTcql2TljikWmoGP+dA5XXIbioA/lhTIaaL8qq/5
+=h4/K
 -----END PGP SIGNATURE-----
