@@ -1,6 +1,14 @@
 # ChangeLog for sys-fs/udev-init-scripts
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev-init-scripts/ChangeLog,v 1.83 2013/07/26 14:50:54 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev-init-scripts/ChangeLog,v 1.85 2013/10/14 18:13:05 floppym Exp $
+
+  14 Oct 2013; Mike Gilbert <floppym@gentoo.org> udev-init-scripts-26.ebuild,
+  udev-init-scripts-9999.ebuild:
+  Drop runtime dependency on openrc, bug 487080.
+
+  26 Jul 2013; Samuli Suominen <ssuominen@gentoo.org>
+  -udev-init-scripts-23.ebuild, -udev-init-scripts-25.ebuild:
+  old
 
   26 Jul 2013; Samuli Suominen <ssuominen@gentoo.org>
   udev-init-scripts-26.ebuild:
